@@ -34,6 +34,7 @@ module ActiveMerchant #:nodoc:
       def purchase(amount, payment_method, options = {})
         post = {}
         add_invoice(post, amount, options)
+        add_customer_vault_data(post, options)
         add_payment_method(post, payment_method, options)
         add_stored_credential(post, options)
         add_customer_data(post, options)
@@ -48,6 +49,7 @@ module ActiveMerchant #:nodoc:
       def authorize(amount, payment_method, options = {})
         post = {}
         add_invoice(post, amount, options)
+        add_customer_vault_data(post, options)
         add_payment_method(post, payment_method, options)
         add_stored_credential(post, options)
         add_customer_data(post, options)
@@ -97,6 +99,7 @@ module ActiveMerchant #:nodoc:
 
       def verify(payment_method, options = {})
         post = {}
+        add_customer_vault_data(post, options)
         add_payment_method(post, payment_method, options)
         add_customer_data(post, options)
         add_vendor_data(post, options)
@@ -277,6 +280,11 @@ module ActiveMerchant #:nodoc:
       def add_vendor_data(post, options)
         post[:vendor_id] = options[:vendor_id] if options[:vendor_id]
         post[:processor_id] = options[:processor_id] if options[:processor_id]
+      end
+
+      def add_customer_vault_data(post, options)
+        post[:customer_vault] = options[:customer_vault] if options[:customer_vault]
+        post[:customer_vault_id] = options[:customer_vault_id] if options[:customer_vault_id]
       end
 
       def add_merchant_defined_fields(post, options)
